# zkir-llvm

./: ARCHITECTURE.md  Cargo.toml  README.md
examples/: crypto.c  privacy.c  simple.c
src/: lib.rs  main.rs  stats.rs
src/debug/: mod.rs
src/emit/: binary.rs  disasm.rs  encode.rs  mod.rs
src/ir/: block.rs  function.rs  mod.rs  module.rs  types.rs
src/lower/: arithmetic.rs  control.rs  intrinsics.rs  memory.rs  mod.rs  types.rs
src/mir/: block.rs  function.rs  instruction.rs  mod.rs  value.rs
src/opt/: bounds_narrow.rs  const_fold.rs  copy_prop.rs  cse.rs  dead_code.rs  inline.rs  int_splitting.rs  licm.rs  loop_unroll.rs  mem_coalesce.rs  mod.rs  peephole.rs  phi_elimination.rs  range_check.rs  signed_ops.rs
src/parser/: mod.rs  parser.rs
src/regalloc/: linear_scan.rs  liveness.rs  mod.rs
src/translate/: control.rs  intrinsics.rs  memory.rs  mod.rs  types.rs
tests/: comprehensive.proptest-regressions  comprehensive.rs  fuzzing.proptest-regressions  fuzzing.rs  integration.rs
